[package]
name = "kreuzberg-pdfium-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "High-level idiomatic Rust wrapper around Pdfium. Fork of pdfium-render with Kreuzberg patches."
license.workspace = true
repository.workspace = true
homepage = "https://kreuzberg.dev"
documentation = "https://docs.rs/kreuzberg-pdfium-render"
keywords = ["pdf", "pdfium", "rendering", "extraction"]
categories = ["api-bindings", "multimedia::images"]
readme = "README.md"
build = "build.rs"
exclude = ["include/**/rust-import-wrapper.h"]

[lib]
name = "pdfium_render"
crate-type = ["lib"]
doctest = false

[dependencies]
bitflags = "2"
bytes = { workspace = true }
bytemuck = "1"
chrono = "0.4"
image_025 = { package = "image", version = "0.25", optional = true, default-features = false, features = [
    "jpeg",
] }
itertools = "0.14"
log = { workspace = true }
maybe-owned = "0.3"
once_cell = { workspace = true }
utf16string = "0.2"
vecmath = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1"
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.9"

[build-dependencies]
bindgen = { version = "0.72", optional = true }

[features]
default = ["image_latest", "thread_safe"]
bindings = ["dep:bindgen"]
thread_safe = []

# Image
image_latest = ["image_025"]
image_025 = ["dep:image_025"]

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = ['cfg(pdfium_use_static)']
