[package]
name = "kreuzberg-py"
version = "4.10.0-rc.2"
edition = "2024"
license = "Elastic-2.0"

[lib]
name = "_kreuzberg"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
kreuzberg = { path = "../kreuzberg", features = ["full"] }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
