[package]
name = "kreuzberg-tesseract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Rust bindings for Tesseract OCR with cross-compilation, C++17, and caching improvements"
license.workspace = true
repository.workspace = true
homepage = "https://kreuzberg.dev"
documentation = "https://docs.kreuzberg.dev"
readme = "README.md"
keywords = ["tesseract", "ocr", "bindings", "vision", "recognition"]
categories = ["external-ffi-bindings", "computer-vision", "text-processing"]
build = "build.rs"
links = "kreuzberg_tesseract"
exclude = ["tessdata/*", "third_party/*"]

[dependencies]
libc = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
image = { workspace = true }

[build-dependencies]
cc = { version = "1.2.49", optional = true }
cmake = { version = "0.1.55", optional = true }
reqwest = { workspace = true, default-features = false, features = [
    "blocking",
    "rustls-tls",
], optional = true }
zip = { version = "6.0.0", optional = true }

[features]
default = ["static-linking"]
build-tesseract = ["cc", "cmake", "reqwest", "zip"]
static-linking = ["build-tesseract"]
dynamic-linking = []

[package.metadata.docs.rs]
features = ["docs-only"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "kreuzberg_tesseract"
crate-type = ["lib"]
