[package]
name = "kreuzberg-wasm"
version = "4.9.5"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance document intelligence library"
repository = "https://github.com/kreuzberg-dev/kreuzberg"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
js-sys = "0.3"
kreuzberg = { path = "../kreuzberg", features = [
    "pdf",
    "excel-wasm",
    "office",
    "hwp",
    "iwork",
    "email",
    "html",
    "xml",
    "archives",
    "embeddings",
    "language-detection",
    "chunking",
    "quality",
    "keywords",
    "mdx",
    "ocr-wasm",
    "tree-sitter-wasm",
    "liter-llm",
    "stopwords",
    "api",
    "mcp",
] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
