[package]
name = "kreuzberg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "High-performance document intelligence library for Rust. Extract text, metadata, and structured data from PDFs, Office documents, images, and 88+ formats with async/sync APIs."
license.workspace = true
repository = "https://github.com/kreuzberg-dev/kreuzberg"
homepage = "https://kreuzberg.dev"
documentation = "https://docs.rs/kreuzberg"
keywords = ["document", "extraction", "pdf", "ocr", "parser"]
categories = ["parser-implementations", "text-processing"]
readme = "README.md"

[package.metadata.cargo-machete]
ignored = ["opentelemetry", "opentelemetry_sdk", "tracing-opentelemetry", "kamadak-exif"]

[lib]
crate-type = ["rlib"]

[features]
default = ["tokio-runtime", "simd-utf8"]

profiling = ["dep:pprof"]

pool-metrics = []

simd-utf8 = ["dep:simdutf8"]

tokio-runtime = ["dep:tokio"]

pdf = ["dep:pdfium-render", "dep:lopdf", "dep:image", "dep:flate2", "html"]
# Experimental: use pdf_oxide for text extraction (pure Rust, no C++ deps).
# Provides cleaner word spacing for PDFs with broken font CMaps.
# Requires 'pdf' feature. Not included in 'full' — opt-in only.
pdf-oxide = ["pdf", "dep:pdf_oxide"]
static-pdfium = ["pdf"]
bundled-pdfium = ["pdf"]
system-pdfium = ["pdf"]
excel = ["dep:calamine", "tokio-runtime"]
excel-wasm = ["dep:calamine"]
office = [
    "dep:cfb",
    "dep:roxmltree",
    "dep:zip",
    "dep:quick-xml",
    "dep:biblatex",
    "dep:biblib",
    "dep:org",
    "dep:dbase",
    "html",
]
hwp = ["dep:cfb", "dep:flate2"]
iwork = ["dep:zip", "dep:snap"]
email = ["dep:mail-parser", "dep:cfb", "dep:outlook-pst", "dep:tempfile", "dep:chrono"]
html = ["dep:html-to-markdown-rs"]
xml = ["dep:quick-xml", "dep:roxmltree"]
archives = ["dep:zip", "dep:tar", "dep:sevenz-rust2", "dep:flate2"]
mdx = []

ocr = [
    "dep:kreuzberg-tesseract",
    "dep:image",
    "dep:tiff",
    "dep:fast_image_resize",
    "dep:kamadak-exif",
    "dep:hayro-jpeg2000",
    "dep:hayro-jbig2",
    "html",
]
# Minimal OCR for WASM: Tesseract + basic image support, without heavy native deps
# (tiff, fast_image_resize, kamadak-exif)
ocr-wasm = [
    "dep:kreuzberg-tesseract",
    "dep:image",
    "dep:hayro-jpeg2000",
    "dep:hayro-jbig2",
]
# PaddleOCR via ONNX Runtime
# Requires 'ocr' feature for shared conversion utilities and table reconstruction
paddle-ocr = [
    "dep:kreuzberg-paddle-ocr",
    "dep:sha2",
    "dep:image",
    "dep:hf-hub",
    "dep:ureq",
    "dep:ort",
    "dep:ndarray",
    "html",
    "tokio-runtime",
    "ocr",
    "auto-rotate",
]
# Bundle ORT binaries via the official Microsoft release (includes CoreML on macOS, CUDA on Linux).
# When active, no system ORT library is required and ort_discovery is skipped.
ort-bundled = ["ort/download-binaries", "ort/tls-native"]
ort-dynamic = ["ort/load-dynamic"]
# Layout detection via ONNX Runtime (YOLO + RT-DETR)
# Document orientation detection using PP-LCNet for auto_rotate
auto-rotate = [
    "dep:ort",
    "dep:ndarray",
    "dep:hf-hub",
    "dep:sha2",
    "dep:image",
    "dep:ureq",
    "ort-bundled",
]
layout-detection = [
    "dep:ort",
    "dep:ndarray",
    "dep:hf-hub",
    "dep:sha2",
    "dep:image",
    "tokio-runtime",
    "ort-bundled",
]
language-detection = ["dep:whatlang"]
chunking = ["dep:text-splitter"]
chunking-tokenizers = ["chunking", "dep:tokenizers", "text-splitter/tokenizers"]
embeddings = [
    "dep:hf-hub",
    "dep:ort",
    "dep:ndarray",
    "dep:tokenizers",
    "chunking",
    "tokio-runtime",
    "ort-bundled",
]
stopwords = []
quality = ["dep:unicode-normalization", "dep:chardetng", "stopwords"]

keywords-yake = ["dep:yake-rust", "stopwords"]
keywords-rake = ["dep:rake", "stopwords"]
keywords = ["keywords-yake", "keywords-rake"]

tower-service = ["dep:tower", "tokio-runtime"]

api = [
    "tower-service",
    "dep:axum",
    "dep:tower-http",
    "dep:utoipa",
    "tokio-runtime",
    "chunking",
]
mcp = ["tower-service", "dep:rmcp", "tokio-runtime"]
mcp-http = ["mcp", "api"]

otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

wasm-target = [
    "pdf",
    "html",
    "xml",
    "email",
    "language-detection",
    "chunking",
    "quality",
    "office",
    "mdx",
    "excel-wasm",
    "archives",
]
wasm-threads = ["dep:wasm-bindgen-rayon"]

formats = [
    "pdf",
    "excel",
    "office",
    "hwp",
    "iwork",
    "email",
    "html",
    "xml",
    "archives",
    "language-detection",
    "chunking",
    "quality",
    "keywords",
    "mdx",
    "api",
    "mcp",
    "otel",
    "chunking-tokenizers",
]
full = [
    "formats",
    "ocr",
    "paddle-ocr",
    "layout-detection",
    "embeddings",
    "api",
    "mcp",
    "otel",
]
server = [
    "pdf",
    "excel",
    "html",
    "ocr",
    "paddle-ocr",
    "layout-detection",
    "chunking",
    "api",
    "mcp",
]
cli = [
    "pdf",
    "excel",
    "office",
    "email",
    "html",
    "xml",
    "ocr",
    "paddle-ocr",
    "layout-detection",
    "language-detection",
    "chunking",
    "quality",
    "mdx",
]

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.8", features = ["macros", "json", "multipart"], optional = true }
base64 = { workspace = true }
biblatex = { version = "0.11", optional = true }
biblib = { version = "0.4", default-features = false, features = [
    "ris",
    "pubmed",
    "xml",
    "regex",
], optional = true }
bitvec = "1.0"
blake3 = { workspace = true }
bytes = { workspace = true }
calamine = { version = "0.34.0", features = ["dates"], optional = true }
cfb = { workspace = true, optional = true }
chardetng = { version = "0.1.17", optional = true }
chrono = { workspace = true, optional = true }
dashmap = "6.1"
dbase = { workspace = true, optional = true }
encoding_rs = { version = "0.8.35" }
fast_image_resize = { version = "6.0.0", optional = true }
flate2 = { version = "1.1", optional = true }
hayro-jbig2 = { version = "0.2", default-features = false, features = ["std"], optional = true }
hayro-jpeg2000 = { version = "0.3", default-features = false, features = [
    "std",
    "simd",
], optional = true }
hex = { workspace = true }
html-to-markdown-rs = { workspace = true, features = [
    "inline-images",
    "metadata",
    "visitor",
], optional = true }
image = { workspace = true, default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "bmp",
    "tiff",
    "gif",
    "pnm",
    "rayon",
], optional = true }
indexmap = "2.13.0"
infer = "0.19.0"
jotdown = "0.9"
kamadak-exif = { version = "0.6.1", optional = true }

kreuzberg-tesseract = { path = "../kreuzberg-tesseract", version = "4.6.2", optional = true }
libc = { workspace = true }
lopdf = { version = "0.40.0", optional = true }
mail-parser = { version = "0.11.2", optional = true }
memchr = "2.8.0"
memmap2 = { workspace = true }
mime_guess = "2.0"
ndarray = { version = "0.17", optional = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { version = "0.31", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
org = { version = "0.3", optional = true }
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "api-18",
], optional = true }
outlook-pst = { version = "1.2.0", optional = true }
parking_lot = { workspace = true }
pastey = "0.2"
pdf_oxide = { workspace = true, optional = true }
pdfium-render = { workspace = true, features = ["thread_safe", "image_latest"], optional = true }
pulldown-cmark = { version = "0.13" }
quick-xml = { version = "0.39.2", features = ["serialize"], optional = true }
rake = { version = "0.3.6", optional = true }
rayon = { workspace = true }
regex = "1.12.3"
rmcp = { version = "1.2.0", features = [
    "server",
    "macros",
    "base64",
    "transport-io",
    "transport-streamable-http-server",
    "server-side-http",
], optional = true }
rmp-serde = "1.3"

roxmltree = { version = "0.21.1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = "0.10.0"
sevenz-rust2 = { version = "0.20.2", optional = true }
sha2 = { version = "0.11", optional = true }
simdutf8 = { version = "0.1", optional = true }
snap = { version = "1.1", optional = true }
tar = { version = "0.4.45", optional = true }
tempfile = { workspace = true, optional = true }
text-splitter = { version = "0.29.3", features = ["markdown"], optional = true }
thiserror = { workspace = true }
tiff = { version = "0.11", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = [
    "http",
    "fancy-regex",
] }
tokio = { workspace = true, optional = true }
toml = { workspace = true }
tower = { version = "0.5", features = ["timeout", "limit", "util"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"], optional = true }
tracing = { workspace = true }
tracing-opentelemetry = { version = "0.32", optional = true }
unicode-normalization = { version = "0.1.25", optional = true }
utoipa = { version = "5.4", features = ["axum_extras"], optional = true }
whatlang = { version = "0.18.0", optional = true }
yake-rust = { version = "1.0.3", optional = true }
zip = { version = ">=7.0.0, <7.4.0", optional = true, default-features = false, features = [
    "deflate-flate2",
] }

[target.'cfg(all(not(target_os = "windows"), not(target_arch = "wasm32")))'.dependencies]
hf-hub = { version = "0.5", default-features = false, features = ["ureq"], optional = true }
# PaddleOCR via ONNX Runtime - not available on WASM (vendored from paddle-ocr-rs)
kreuzberg-paddle-ocr = { path = "../kreuzberg-paddle-ocr", version = "4.6.2", optional = true }
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }
# Force ureq (transitive dep via hf-hub) to use rustls on non-Windows
ureq = { version = "3.3", default-features = false, features = ["rustls", "json"], optional = true }

# Use native-tls on Windows to avoid aws-lc-sys CMake build issues with MinGW
[target.'cfg(all(target_os = "windows", not(target_arch = "wasm32")))'.dependencies]
hf-hub = { version = "0.5", default-features = false, features = ["ureq"], optional = true }
# PaddleOCR via ONNX Runtime - not available on WASM (vendored from paddle-ocr-rs)
kreuzberg-paddle-ocr = { path = "../kreuzberg-paddle-ocr", version = "4.6.2", optional = true }
# Force ureq (transitive dep via hf-hub) to use native-tls on Windows
ureq = { version = "3.3", default-features = false, features = [
    "native-tls",
    "json",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Override getrandom to enable js feature for WASM targets
# This is needed because ring/rustls (via ureq) depend on getrandom without js feature
getrandom = { workspace = true }
wasm-bindgen-rayon = { version = "1.3", optional = true }

[build-dependencies]
pkg-config = "0.3"
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
filetime = "0.2"
image = { workspace = true, default-features = false, features = ["png"] }
serial_test = "3.4.0"
tar = "0.4.45"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = ">=7.0.0, <7.4.0", default-features = false, features = ["deflate-flate2"] }
